[tool.poetry]
name = "bookman"
version = "0.2.0"
description = ""
authors = ["Donghyeon Kim <0916dhkim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PySide2 = "^5.13"
SQLAlchemy = "^1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
yapf = "^0.28.0"
pytest = "^5.1"
ipython = "^7.8"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
rope = "^0.14.0"
mypy = "^0.720.0"
black = "==19.3b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
